--- a/1_4.ipynb
+++ b/1_4.ipynb
@@ -114,6 +114,8 @@
     "        [headlines_dict[x]['cities'] for x in headlines_dict.keys()])\n",
     "my_df = pd.DataFrame(f, columns =[\"Headline\", \"Country\", \"City\"])\n",
     "print(my_df)"
+    "from IPython.display import diplay, HTML"
+    "display(HTML(my_df.to_html()))"
    ]
   },
   {
